--- a/js/engine/components/auth/registration/registration.css
+++ b/js/engine/components/auth/registration/registration.css
@@ -17,6 +17,16 @@
         width: 150px;
     }
 
+    .authRegistrationLogo h1 {
+        font-weight: 800;
+        font-family: Whitney;
+        font-size: 60px;
+        letter-spacing: 15px;
+        color: var(--primary-color);
+        user-select: none;
+        margin-bottom: 0px;
+    }
+
 .authRegistrationTypes {
     display: flex;
     flex-direction: row;
