--- a/js/engine/components/logout/logout/logout.css
+++ b/js/engine/components/logout/logout/logout.css
@@ -18,6 +18,16 @@
 		width: 150px;
 	}
 
+	.logoutLogo h1 {
+		font-weight: 800;
+		font-family: Whitney;
+		font-size: 60px;
+		letter-spacing: 15px;
+		color: var(--primary-color);
+		user-select: none;
+		margin-bottom: 0px;
+	}
+
 .logoutAccount {
 	border-radius: 4px;
 	display: flex;
